WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71397
[Qt] [WK] Debug build broken after
r99065
https://bugs.webkit.org/show_bug.cgi?id=71397
Summary
[Qt] [WK] Debug build broken after r99065
Viatcheslav Ostapenko
Reported
2011-11-02 13:48:09 PDT
../../../Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp:296:5: error: ‘panGestureActive’ was not declared in this scope
Attachments
Remove reference to panGestureActive.
(1.42 KB, patch)
2011-11-02 13:55 PDT
,
Viatcheslav Ostapenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Viatcheslav Ostapenko
Comment 1
2011-11-02 13:55:14 PDT
Created
attachment 113373
[details]
Remove reference to panGestureActive.
Simon Hausmann
Comment 2
2011-11-02 14:46:24 PDT
Comment on
attachment 113373
[details]
Remove reference to panGestureActive. View in context:
https://bugs.webkit.org/attachment.cgi?id=113373&action=review
r=me for buildfix
> Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp:-296 > - Q_ASSERT(!panGestureActive);
I suppose Kenneth intended to write !panAnimationActive() perhaps?
WebKit Review Bot
Comment 3
2011-11-02 16:03:05 PDT
Comment on
attachment 113373
[details]
Remove reference to panGestureActive. Clearing flags on attachment: 113373 Committed
r99116
: <
http://trac.webkit.org/changeset/99116
>
WebKit Review Bot
Comment 4
2011-11-02 16:03:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug