[Qt] [WK] Debug build broken after r99065 https://bugs.webkit.org/show_bug.cgi?id=71397

Remove reference to panGestureActive becuase it is not defined anywhere.

Patch by Viatcheslav Ostapenko <ostapenko.viatcheslav@nokia.com> on 2011-11-02
Reviewed by Simon Hausmann.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::panGestureStarted):

Canonical link: https://commits.webkit.org/87707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99116 268f45cc-cd09-0410-ab3c-d52691b4dbfc